Bug 10510 - OPAC's renew selected link has glitchy icon
The "renew selected" link on the list of a user's checkouts looks bad
because the next icon in the sprite shows through. This patch modifies
the sprite to give it proper spacing and corrects the CSS to accommodate
the change.

To test, apply the patch, clear your browser cache, and view the
following pages to confirm that the change works:

- With TagsEnabled and TagsInputOnList enabled, view a search results
  page when logged in and when not logged in. Tag links should be
  styled correctly.

- With OpacBrowseResults enabled, open the detail page for any record
  and click the "browse shelf" link. The "forward" and "back" arrows
  should be styled correctly.

- With OpacRenewalAllowed enabled, log in to the OPAC and view your
  checked out items. The "renew selected" and "renew all" links should
  look correct.

Note: this will fix only the prog theme, but not the ccsr theme.
And it works perfectly.

(cherry picked from commit 1a1658f020e482abdd35fc8afc04cfcbce91e046)

--- a/koha-tmpl/opac-tmpl/prog/en/css/opac.css
+++ b/koha-tmpl/opac-tmpl/prog/en/css/opac.css
@@ -741,7 +741,7 @@ input.deleteshelf:active {
 
 a.tag_add {
     background-image: url("../../images/sprite.png"); /* Tag results */
-    background-position: -10px -1104px;
+    background-position: -10px -1110px;
     background-repeat: no-repeat;
     padding-left : 13px;
     text-decoration: none;
@@ -749,7 +749,7 @@ a.tag_add {
 
 #login4tags {
     background-image: url("../../images/sprite.png"); /* Tag results disabled */
-    background-position: -10px -1124px;
+    background-position: -10px -1130px;
     background-repeat: no-repeat;
     padding-left : 13px;
     text-decoration: none;
@@ -2045,7 +2045,6 @@ a#MARCview, a#MARCviewPop, a#ISBDview, a#Normalview, a#Fullhistory, a#Briefhisto
 #shelfbrowser #browser_next,
 #shelfbrowser #browser_previous {
     background-image : url("../../images/sprite.png");
-    background-position : -5px -988px;
     background-repeat: no-repeat;
     width : 16px;
 }
@@ -2061,10 +2060,10 @@ a#MARCview, a#MARCviewPop, a#ISBDview, a#Normalview, a#Fullhistory, a#Briefhisto
     width: 16px;
 }
 #shelfbrowser #browser_previous {
-background-position: -9px -1001px;
+background-position: -9px -1007px;
 }
 #shelfbrowser #browser_next {
-background-position: -9px -1051px;
+background-position: -9px -1057px;
 }
 
 #comments .commentline {
@@ -2266,13 +2265,13 @@ div.bibmessage { background-color : #ffffb0; border-radius : 5px; padding : 3px;
 
 #renewselected_link {
     background-image : url("../../images/sprite.png");
-    background-position : -5px -988px;
+    background-position : -5px -986px;
     background-repeat: no-repeat;
 }
 
 #renewall_link {
     background-image : url("../../images/sprite.png");
-    background-position : -8px -964px;
+    background-position : -8px -967px;
     background-repeat: no-repeat;
 }
 
